# mavlink-router

./: CMakeLists.txt  android_build.sh  mavlink-router.cmake
cmake/: Findrt.cmake
cmake/code_tests/: rt_test.cc
src/: CMakeLists.txt  endpoint.cpp  endpoint.h  logendpoint.cpp  logendpoint.h  main.cpp  mainloop.cpp  mainloop.h
src/common/: conf_file.h  log.cpp  xtermios.cpp
